<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:showIn="@layout/app_bar_main">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingTop="16dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/nfcCheckBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/check_nfc_available"
                android:textAlignment="center"
                android:layout_gravity="center"/>

            <TextView
                android:id="@+id/displayTxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/nfcDisplayDefault"
                android:textAlignment="center"
                android:visibility="visible"
                android:layout_gravity="center"/>

            <Button
                android:id="@+id/changeNfcSettings"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/change_nfc_setting"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <Button
                android:id="@+id/knowNfc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/know_more_nfc"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:visibility="visible" />

            <Button
                android:id="@+id/nfc_read"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/read_nfc_tag"
                android:textAlignment="center"
                android:layout_gravity="center"
                android:visibility="invisible" />

            <Button
                android:id="@+id/phone_list_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/list_of_nfc_phones"
                android:textAlignment="center"
                android:layout_gravity="center"/>
        </LinearLayout>

        <include
            layout="@layout/adlayout"
            android:layout_gravity="bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>